UI style and structure

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors - The Odin Project</title>
     <script type="text/javascript" src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <h1><span>Choose your hand</span></h1>
+        <section id="playerButtons">
+            <a class="button rock" href="#" data-option="rock">Rock</a>
+            <a class="button paper" href="#" data-option="paper">Paper</a>
+            <a class="button scissors" href="#" data-option="scissors">Scissors</a>
+        </section>
+        <section id="result"></section>
+    </main>
 </body>
 </html>
